--- a/zod-storage/package.json
+++ b/zod-storage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sharry.co/zod-storage",
+  "name": "zod-storage",
   "version": "0.0.1",
   "dependencies": {
     "tslib": "^2.3.0",
@@ -8,7 +8,7 @@
   "type": "commonjs",
   "main": "./src/index.js",
   "typings": "./src/index.d.ts",
-  "private": true,
+  "private": false,
   "devDependencies": {
     "jest-localstorage-mock": "^2.4.26"
   }
