chore: use zod as peerDependency

--- a/zod-storage/package.json
+++ b/zod-storage/package.json
@@ -1,8 +1,10 @@
 {
   "name": "zod-storage",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.0"
+  },
+  "peerDependencies": {
     "zod": "^3.22.4"
   },
   "type": "commonjs",
