chore: add devenv.nix

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ testem.log
 Thumbs.db
 
 .nx/cache
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
