--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
